--- a/index.html
+++ b/index.html
@@ -4,47 +4,97 @@
 <title>Himesh Kudalkar</title>
 
 <style>
+:root {
+  --bg: #0f2027;
+  --card: rgba(255,255,255,0.1);
+  --text: white;
+}
+
+body.light {
+  --bg: #f4f6f8;
+  --card: white;
+  --text: #222;
+}
+
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-    color: white;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: var(--bg);
+  color: var(--text);
+  transition: 0.5s;
 }
 
 .container {
-    text-align: center;
-    padding: 50px;
+  text-align: center;
+  padding: 50px;
+  animation: fadeIn 1.5s;
 }
 
 .profile-pic {
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
-    border: 4px solid white;
-    object-fit: cover;
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  border: 4px solid white;
+  object-fit: cover;
+  animation: float 3s infinite ease-in-out;
 }
 
 h1 {
-    margin-top: 20px;
-    font-size: 36px;
+  font-size: 36px;
+  margin-top: 20px;
 }
 
 p {
-    font-size: 18px;
-    opacity: 0.9;
+  font-size: 18px;
 }
 
 .card {
-    background: rgba(255,255,255,0.1);
-    padding: 20px;
-    margin: 20px auto;
-    width: 70%;
-    border-radius: 12px;
+  background: var(--card);
+  padding: 20px;
+  margin: 20px auto;
+  width: 70%;
+  border-radius: 12px;
+  animation: slideUp 1s;
+}
+
+button {
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 25px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.resume-btn {
+  background: #00ffff;
+  color: black;
+}
+
+.toggle-btn {
+  background: orange;
+  color: black;
 }
 
 a {
-    color: #00ffff;
-    text-decoration: none;
+  color: #00ffff;
+  text-decoration: none;
+}
+
+@keyframes fadeIn {
+  from {opacity:0;}
+  to {opacity:1;}
+}
+
+@keyframes slideUp {
+  from {transform: translateY(30px); opacity:0;}
+  to {transform: translateY(0); opacity:1;}
+}
+
+@keyframes float {
+  0% {transform: translateY(0);}
+  50% {transform: translateY(-10px);}
+  100% {transform: translateY(0);}
 }
 </style>
 </head>
@@ -53,32 +103,44 @@ a {
 
 <div class="container">
 
-    <!-- Your Photo -->
-    <img src="myphoto.jpg" class="profile-pic">
+  <img src="myphoto.jpg" class="profile-pic">
 
-    <h1>Himesh Kudalkar</h1>
-    <p>AI & Data Science Student | Machine Learning Enthusiast</p>
+  <h1>Himesh Kudalkar</h1>
+  <p>AI & Data Science Student | Machine Learning Enthusiast</p>
 
-    <div class="card">
-        <h2>Projects</h2>
-        <p>Kaggle House Prices Prediction using LightGBM</p>
-        <p>Customer Purchase Behaviour Analysis</p>
-    </div>
+  <button class="toggle-btn" onclick="toggleMode()">🌙 / ☀ Mode</button>
+  <br>
+  <a href="resume.pdf" download>
+    <button class="resume-btn">📄 Download Resume</button>
+  </a>
 
-    <div class="card">
-        <h2>About Me</h2>
-        <p>I am passionate about machine learning, data science and building real-world AI solutions.</p>
-    </div>
+  <div class="card">
+    <h2>Projects</h2>
+    <p>Kaggle House Prices Prediction using LightGBM</p>
+    <p>Customer Purchase Behaviour Analysis</p>
+  </div>
 
-    <div class="card">
-        <h2>Contact</h2>
-        <p>
-            <a href="https://www.linkedin.com/in/himesh-kudalkar-7838042b2">LinkedIn</a> |
-            <a href="https://github.com/himeshkudalkar07">GitHub</a>
-        </p>
-    </div>
+  <div class="card">
+    <h2>About Me</h2>
+    <p>I am passionate about machine learning, data science and building real-world AI solutions.</p>
+  </div>
+
+  <div class="card">
+    <h2>Contact</h2>
+    <p>
+      <a href="https://www.linkedin.com/in/himesh-kudalkar-7838042b2">LinkedIn</a> |
+      <a href="https://github.com/himeshkudalkar07">GitHub</a>
+    </p>
+  </div>
 
 </div>
 
+<script>
+function toggleMode(){
+  document.body.classList.toggle("light");
+}
+</script>
+
 </body>
 </html>
+
