--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a {
 
 <div class="container">
 
-  <img src="myphoto.jpg" class="profile-pic">
+  <img src="myphoto.png" class="profile-pic">
 
   <h1>Himesh Kudalkar</h1>
   <p>AI & Data Science Student | Machine Learning Enthusiast</p>
